@@ -366,6 +366,8 @@ class ParserTest {
 		} elseif( isset( $opts['comment'] ) ) {
 			$linker = $user->getSkin();
 			$out = $linker->formatComment( $input, $title, $local );
+		} elseif( isset( $opts['preload'] ) ) {
+			$out = $parser->getpreloadText( $input, $title, $options );
 		} else {
 			$output = $parser->parse( $input, $title, $options, true, true, 1337 );
 			$out = $output->getText();
